Tests are running again